[gd_scene load_steps=17 format=2]

[ext_resource path="res://canvas.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/canvases/Paradies1.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://paradise.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/graphics/canvases/Paradies3.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/canvases/Paradies2.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/canvases/Paradies0.png" type="Texture" id=7]
[ext_resource path="res://assets/noto.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/music/leopard-print-elevator-by-kevin-macleod-from-filmmusic-io.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/graphics/stamps/parchment.png" type="Texture" id=10]
[ext_resource path="res://download_info.gd" type="Script" id=11]
[ext_resource path="res://assets/graphics/stamps/download.png" type="Texture" id=12]
[ext_resource path="res://assets/graphics/background.png" type="Texture" id=13]
[ext_resource path="res://grim_reaper_cursor.gd" type="Script" id=14]
[ext_resource path="res://assets/graphics/characters/grim_reaper_cursor.png" type="Texture" id=15]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Foreground/canvas/Viewport")

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Node2D" parent="."]
z_index = -1

[node name="Environment" type="Sprite" parent="Background"]
z_index = -100
texture = ExtResource( 13 )
centered = false

[node name="Characters" type="Node2D" parent="Background"]

[node name="Positions" type="Node2D" parent="Background"]
position = Vector2( 157.061, 321.78 )

[node name="-1" type="Position2D" parent="Background/Positions"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 808.183, -1232.13 )

[node name="0" type="Position2D" parent="Background/Positions"]
position = Vector2( 755.937, 379.215 )
z_index = -1

[node name="1" type="Position2D" parent="Background/Positions"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
position = Vector2( 477.589, 322.095 )
scale = Vector2( 0.95, 0.95 )
z_index = -2

[node name="2" type="Position2D" parent="Background/Positions"]
modulate = Color( 0.9, 0.9, 0.9, 1 )
position = Vector2( 286.528, 429.282 )
scale = Vector2( 0.95, 0.95 )
z_index = -3

[node name="3" type="Position2D" parent="Background/Positions"]
modulate = Color( 0.85, 0.85, 0.85, 1 )
position = Vector2( 258.628, 298.295 )
scale = Vector2( 0.9, 0.9 )
z_index = -4

[node name="4" type="Position2D" parent="Background/Positions"]
modulate = Color( 0.8, 0.8, 0.8, 1 )
position = Vector2( 153.907, 264.975 )
scale = Vector2( 0.85, 0.85 )
z_index = -5

[node name="5" type="Position2D" parent="Background/Positions"]
modulate = Color( 0.75, 0.75, 0.75, 1 )
position = Vector2( 17.4534, 240.761 )
scale = Vector2( 0.8, 0.8 )
z_index = -6

[node name="6" type="Position2D" parent="Background/Positions"]
modulate = Color( 0.701961, 0.701961, 0.701961, 1 )
position = Vector2( -60.2936, 126.934 )
scale = Vector2( 0.75, 0.75 )
z_index = -7

[node name="7" type="Position2D" parent="Background/Positions"]
modulate = Color( 0.65098, 0.65098, 0.65098, 1 )
position = Vector2( 84.0938, 52.3602 )
scale = Vector2( 0.7, 0.7 )
z_index = -8

[node name="8" type="Position2D" parent="Background/Positions"]
modulate = Color( 0.6, 0.6, 0.6, 1 )
position = Vector2( -90.4405, -19.6268 )
scale = Vector2( 0.65, 0.65 )
z_index = -9

[node name="9" type="Position2D" parent="Background/Positions"]
modulate = Color( 0.54902, 0.54902, 0.54902, 1 )
position = Vector2( 12.6934, -150.734 )
scale = Vector2( 0.6, 0.6 )
z_index = -10

[node name="10" type="Position2D" parent="Background/Positions"]
modulate = Color( 0.2, 0.2, 0.2, 1 )
position = Vector2( -633.834, 165.948 )
scale = Vector2( 0.7, 0.7 )
z_index = -11

[node name="Foreground" type="Node2D" parent="."]
position = Vector2( 1078.64, 79.3082 )

[node name="ColorRect" type="ColorRect" parent="Foreground"]
margin_right = 731.0
margin_bottom = 820.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="canvas" type="TextureRect" parent="Foreground"]
margin_left = 10.0
margin_top = 10.0
margin_right = 721.0
margin_bottom = 810.0
texture = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Foreground/canvas"]
size = Vector2( 711, 800 )
transparent_bg = true
msaa = 4
usage = 0
render_target_v_flip = true
render_target_clear_mode = 2

[node name="background" type="Node2D" parent="Foreground/canvas/Viewport"]

[node name="paradise" parent="Foreground/canvas/Viewport/background" instance=ExtResource( 4 )]

[node name="stamps" type="Node2D" parent="Foreground/canvas/Viewport"]

[node name="first_start_screen" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="first_start_screen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 219.604
margin_top = -220.527
margin_right = 736.604
margin_bottom = 73.4726
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="first_start_screen/container"]
margin_right = 517.0
margin_bottom = 229.0
custom_fonts/font = ExtResource( 8 )
text = "Welcome to Mort Partout!
Click to select
Scroll to rotate
Make your dead happy!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_game" type="Button" parent="first_start_screen/container"]
margin_top = 233.0
margin_right = 517.0
margin_bottom = 294.0
custom_fonts/font = ExtResource( 8 )
text = "Start Game"

[node name="level_finished_screen" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="level_finished_screen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 130.491
margin_top = -220.235
margin_right = 841.491
margin_bottom = 15.765
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="level_finished_screen/container"]
margin_right = 711.0
margin_bottom = 171.0
custom_fonts/font = ExtResource( 8 )
text = "You finished level {0}
with a score of {1}.
Good Job!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_next_level" type="Button" parent="level_finished_screen/container"]
margin_top = 175.0
margin_right = 711.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 8 )
text = "Start Next Level"

[node name="download_info" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="download_info"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_fonts/font = ExtResource( 8 )
text = "Painting downloaded to {0}!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="download_hide_timer" type="Timer" parent="download_info"]
wait_time = 3.0
one_shot = true

[node name="UI" type="Control" parent="."]
margin_left = 1840.8
margin_top = 944.752
margin_right = 1880.8
margin_bottom = 984.752
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0" type="TextureButton" parent="UI"]
margin_left = -19.6631
margin_top = -623.556
margin_right = 1900.34
margin_bottom = 176.444
rect_scale = Vector2( 0.115706, 0.115706 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureButton" parent="UI"]
margin_left = -19.7656
margin_top = -527.398
margin_right = 1900.23
margin_bottom = 1632.6
rect_scale = Vector2( 0.0429752, 0.0429752 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="TextureButton" parent="UI"]
margin_left = -19.9609
margin_top = -430.211
margin_right = 1900.04
margin_bottom = 1729.79
rect_scale = Vector2( 0.043361, 0.043361 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="TextureButton" parent="UI"]
margin_left = -20.0
margin_top = -332.0
margin_right = 1900.0
margin_bottom = 1828.0
rect_scale = Vector2( 0.0435557, 0.0435557 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Give" type="TextureButton" parent="UI"]
margin_left = -23.8154
margin_top = -235.237
margin_right = 176.185
margin_bottom = -35.2369
rect_scale = Vector2( 0.462705, 0.462705 )
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Download" type="TextureButton" parent="UI"]
margin_left = -11.8154
margin_top = -111.237
margin_right = 188.185
margin_bottom = 88.7631
rect_scale = Vector2( 0.356693, 0.356693 )
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pallet" type="GridContainer" parent="UI"]
margin_left = -755.763
margin_top = -7.17456
margin_right = -755.763
margin_bottom = -7.17456
rect_scale = Vector2( 0.3, 0.3 )
columns = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -22.0
autoplay = true

[node name="grim_reaper_cursor" type="Sprite" parent="."]
visible = false
position = Vector2( 105.52, 702.511 )
z_index = 100
texture = ExtResource( 15 )
centered = false
offset = Vector2( 0, -108 )
script = ExtResource( 14 )
[connection signal="mouse_entered" from="Foreground/canvas" to="." method="_on_canvas_mouse_entered"]
[connection signal="mouse_exited" from="Foreground/canvas" to="." method="_on_canvas_mouse_exited"]
[connection signal="stamp" from="Foreground/canvas" to="." method="_on_canvas_stamp"]
[connection signal="pressed" from="first_start_screen/container/start_game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="level_finished_screen/container/start_next_level" to="." method="start_next_level"]
[connection signal="timeout" from="download_info/download_hide_timer" to="download_info" method="_on_download_hide_timer_timeout"]
[connection signal="pressed" from="UI/0" to="." method="_on_0_pressed"]
[connection signal="pressed" from="UI/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="UI/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="UI/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="UI/Give" to="." method="_on_Give_pressed"]
[connection signal="pressed" from="UI/Download" to="." method="_on_Download_pressed"]
